--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <div class="hero">
       <div class="calloutContainer">
         <div class="callout">Ultralight Backpacking Gear</div>
+        <div class="description">
+          For backpackers who want to go farther and faster than ever before...
+        </div>
       </div>
     </div>
 
